backend/deplymentfront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontdep
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-front
  template:
    metadata:
      labels:
        app: my-front
    spec:
      containers:
        - name: front
          image: killerquen69/frontkub1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          # Désactivation temporaire des probes de santé pour diagnostiquer le problème


---
apiVersion: v1
kind: Service
metadata:
  name: servicefront
  namespace: exam
spec:
  selector:
    app: my-front
  ports:
    - port: 80
      targetPort: 80
