backend/ingressprojet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-projet
  namespace: exam
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicefront
                port:
                  number: 80
